--- a/src/app/adobe/styles/page.module.css
+++ b/src/app/adobe/styles/page.module.css
@@ -1,16 +1,16 @@
+.section {
+  display: flex; 
+}
 
-
-
- .layout {
+.layout {
   flex: 3;
-  background-color: rgb(238, 226, 226);
+  background-color: rgba(204, 204, 204, 0.185);
   height: 90vh;
 }
 
-
 .row{
   height: 40px;
-  background-color: rgb(240, 236, 236);
+  background-color: rgba(231, 228, 228, 0.733);
 
 }
 
@@ -37,27 +37,29 @@
 .cardsParent{
 
   position: relative;
-  width: 90%;
+  width: 95%;
   height: 100%;
-  border: 1px solid black;
-  /* margin-top: 50px; */
   margin-left: auto;
   margin-right: auto;
   
 }
 
 
-.header{
+.header {
   position: absolute;
   background-color: white;
-  height: 40px ;
+  height: 40px;
   width: 100%;
   border-radius: 2px;
-
-  top:20px;
+  top: 20px;
   display: flex;
-  justify-content: start;  
   align-items: center;
+}
+
+.header span:first-child{
+  color: gray;
+  margin: 10px;
+
 }
 
 
@@ -107,3 +109,13 @@
 
 }
 
+
+
+.aside {
+  flex: 1;
+  background-color: white;
+  box-shadow: 0px 2px 4px rgba(0, 2px, 4px, 0.1);
+  height: 100vh;
+
+
+}
